POR/RefEdge/src/objects/User_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Available_Points__c</fullName>
        <label>Available Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifetime_Points__c</fullName>
        <label>Lifetime Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_User_Profile__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;SalesUserProfile?Id=&apos;+  User__r.Id  , &apos;Manage&apos;, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RefEdge User Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RefEdge User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_User_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RefEdge User Profile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>New_View</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Lifetime_Points__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>User__c</columns>
        <columns>Sales_User_Profile__c</columns>
        <filterScope>Mine</filterScope>
        <label>New View</label>
    </listViews>
    <nameField>
        <displayFormat>SUP-{0000}</displayFormat>
        <label>Sales User Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RefEdge User Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>